test/bad/generics/type07.px

func f<A,B>(p: A*B*A): Void def
    return

f(('$', 7, 8))
